# dl_techniques

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  NAM.md  README.md  generate_docs.py  pyproject.toml  pyproject.toml.py  requirements.txt  run_iter2_sweep.sh  setup.py
docs/: 2023_attention.md  2026_intelligence.md  README.md  bcn_thesis.md  brier_skill_score_bss.md  component_reference.md  custom_rms_norm.md  encoder_only_mask_transformer  experiment_guide.md  fid_score.md  hierarchical_vision_transformers.md  identity_mappings_in_deep_residual_networks.md  large_language_model_basic_blocks.md  llm_architecture_guide.md  mdn.md  model_analyzer.md  module_index.json  neural_network_architectures.md  orthogonal_regularization.md  pavement_defection_sota.md  pavement_model_reference.md  project_knowledge.md  vision_transformer_patch_embedding_guide.md  wasserstein_loss.md
logs/: .coco_eval_log  .plain_current_log  .resize_log  .resize_pidf  .smoke_current_log  .smoke_run_dir  cliffordclip_plain_20260531_213346.pid  gate_watcher.sh  resize_cc3m_20260601_084219.pid  resize_watcher.sh  smoke_batch2.sh  smoke_batch2_summary.txt  smoke_summary.txt  smoke_sweep.sh
plans/: DECISIONS.md  FINDINGS.md  INDEX.md  LESSONS.md  SYSTEM.md
research/: 2023_attention.md  2025_alternatives_to_softmax.md  2025_attention.md  2025_aunet_autoregressive_unet_lm.md  2025_calm_continuous_autoregressive_lm.md  2025_deepseek_ocr_vlm_architectures.md  2025_dropout_placement_and_rate.md  2025_dynamic_cut.md  2025_embedding_models_research.md  (+109 more)
(+2428 files in other folders)
